cmake_minimum_required(VERSION 3.10)
project(opengl-learning VERSION 0.0.1)
set(CMAKE_CXX_STANDARD 17)
include(E:/vcpkg/scripts/buildsystems/vcpkg.cmake)

find_package(glfw3 CONFIG REQUIRED)
find_package(glad CONFIG REQUIRED)
find_package(Stb REQUIRED)
find_package(glm CONFIG REQUIRED)

add_subdirectory(demo1)
add_subdirectory(demo2)
add_subdirectory(demo3)
add_subdirectory(demo4)
add_subdirectory(demo5)
add_subdirectory(demo6)
add_subdirectory(demo7)